--- a/Anime Website/HTML/index.html
+++ b/Anime Website/HTML/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../CSS/index.css">
     <title>Hetuk Anime Website</title>
 </head>
 
@@ -30,8 +30,8 @@
             </ul>
         </div>
         <div class="child2">
-            <img src="./utils/Facebook.svg" alt="Facebook Logo">
-            <img src="./utils/Youtube.svg" alt="Youtube Logo">
+            <img src="../utils/Facebook.svg" alt="Facebook Logo">
+            <img src="../utils/Youtube.png" alt="Youtube Logo">
         </div>
     </nav>
     <div class="parent">
@@ -39,19 +39,19 @@
             <div class="item">
                 <div class="image1"></div>
                 <div class="text">
-                    Solo Leveling Season 2: Arise from the Shadow &amp;amp; Hindi-Tamil-Telugu-Eng-Jap &amp;amp; Multi Audio 480p, 720p &amp;amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                    Solo Leveling Season 2: Arise from the Shadow &amp; Hindi-Tamil-Telugu-Eng-Jap &amp; Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                 </div>
             </div>
             <div class="item">
                 <div class="image2"></div>
                 <div class="text">
-                    Jujutsu Kaisen Season 1[Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp;amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                    Jujutsu Kaisen Season 1[Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                 </div>
             </div>
             <div class="item">
                 <div class="image3"></div>
                 <div class="text">
-                    Demon Slayer Season 1[Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp;amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                    Demon Slayer Season 1[Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                 </div>
             </div>
             <div class="item">
@@ -70,7 +70,7 @@
         <div class="latest">
             <div class="child3">
                 <div class="anime">
-                    <img src="./utils/Solo Leveling(1).jpg" alt="Solo Leveling Image" class="latest_img">
+                    <img src="../utils/Solo Leveling(1).jpg" alt="Solo Leveling Image" class="latest_img">
                     <div class="description">
                         <p>
                             Solo Leveling Season 2:<br> Arise from the Shadow [Hindi-<br>Tamil-Telugu-Eng-Jap] Multi
@@ -79,18 +79,18 @@
                         <br>
                         <div class="time">
                             <div class="date">
-                                <img src="./utils/Clock.svg" alt="clock image" class="clock">
+                                <img src="../utils/Clock.svg" alt="clock image" class="clock">
                                 <p>April 20, 2025</p>
                             </div>
                             <div class="source">
-                                <img src="./utils/Profile.svg" alt="Source Image" class="profile">
+                                <img src="../utils/Profile.svg" alt="Source Image" class="profile">
                                 <p>Hetuk Patel</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="anime">
-                    <img src="./utils/Jujutsu Kaisen(1).jpg" alt="Jujutsu Kaisen" class="latest_img">
+                    <img src="../utils/Jujutsu Kaisen(1).jpg" alt="Jujutsu Kaisen" class="latest_img">
                     <div class="description">
                         <p>
                             Jujutsu Kaisen [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi Audio 480p, 720p &amp;<br> 1080p HD WEB-DL | 10bit HEVC ESub
@@ -98,18 +98,18 @@
                         <br>
                         <div class="time">
                             <div class="date">
-                                <img src="./utils/Clock.svg" alt="clock image" class="clock">
+                                <img src="../utils/Clock.svg" alt="clock image" class="clock">
                                 <p>April 20, 2025</p>
                             </div>
                             <div class="source">
-                                <img src="./utils/Profile.svg" alt="Source Image" class="profile">
+                                <img src="../utils/Profile.svg" alt="Source Image" class="profile">
                                 <p>Hetuk Patel</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="anime">
-                    <img src="./utils/Demon Slayer(1).jpg" alt="Demon Slayer" class="latest_img">
+                    <img src="../utils/Demon Slayer(1).jpg" alt="Demon Slayer" class="latest_img">
                     <div class="description">
                         <p>
                             Demon Slayer[Hindi-Tamil-Telugu<br>-Eng-Jap] Multi Audio 480p, 720p &amp;<br> 1080p HD WEB-DL | 10bit HEVC ESub
@@ -117,18 +117,18 @@
                         <br>
                         <div class="time">
                             <div class="date">
-                                <img src="./utils/Clock.svg" alt="clock image" class="clock">
+                                <img src="../utils/Clock.svg" alt="clock image" class="clock">
                                 <p>April 20, 2025</p>
                             </div>
                             <div class="source">
-                                <img src="./utils/Profile.svg" alt="Source Image" class="profile">
+                                <img src="../utils/Profile.svg" alt="Source Image" class="profile">
                                 <p>Hetuk Patel</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="anime">
-                    <img src="./utils/Death Note(1).jpg" alt="Death Note" class="latest_img">
+                    <img src="../utils/Death Note(1).jpg" alt="Death Note" class="latest_img">
                     <div class="description">
                         <p>
                             Death Note [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi Audio 480p, 720p &amp;<br> 1080p HD WEB-DL | 10bit HEVC ESub
@@ -136,18 +136,18 @@
                         <br>
                         <div class="time">
                             <div class="date">
-                                <img src="./utils/Clock.svg" alt="clock image" class="clock">
+                                <img src="../utils/Clock.svg" alt="clock image" class="clock">
                                 <p>April 20, 2025</p>
                             </div>
                             <div class="source">
-                                <img src="./utils/Profile.svg" alt="Source Image" class="profile">
+                                <img src="../utils/Profile.svg" alt="Source Image" class="profile">
                                 <p>Hetuk Patel</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="anime">
-                    <img src="./utils/Naruto(1).jpg" alt="Naruto" class="latest_img">
+                    <img src="../utils/Naruto(1).jpg" alt="Naruto" class="latest_img">
                     <div class="description">
                         <p>
                             Naruto Season 01 [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi Audio 480p, 720p &amp;<br> 1080p HD WEB-DL | 10bit HEVC ESub
@@ -155,11 +155,11 @@
                         <br>
                         <div class="time">
                             <div class="date">
-                                <img src="./utils/Clock.svg" alt="clock image" class="clock">
+                                <img src="../utils/Clock.svg" alt="clock image" class="clock">
                                 <p>April 20, 2025</p>
                             </div>
                             <div class="source">
-                                <img src="./utils/Profile.svg" alt="Source Image" class="profile">
+                                <img src="../utils/Profile.svg" alt="Source Image" class="profile">
                                 <p>Hetuk Patel</p>
                             </div>
                         </div>
@@ -171,10 +171,10 @@
                 <h6>Follow Me</h6>
                 <hr>
                 <div class="icons">
-                    <img src="./utils/Discord.svg" alt="Discord Icon">
-                    <img src="./utils/Telegram.svg" alt="Telegram Icon">
-                    <img src="./utils/Facebook (1).png" alt="Facebook Icon">
-                    <img src="./utils/Youtube.png" alt="Youtube Icon">
+                    <img src="../utils/Discord.svg" alt="Discord Icon">
+                    <img src="../utils/Telegram.svg" alt="Telegram Icon">
+                    <img src="../utils/Facebook (1).png" alt="Facebook Icon">
+                    <img src="../utils/Youtube.png" alt="Youtube Icon">
                 </div>
                 <h5>Latest Uploads</h5>
                 <hr>
