--- a/Practice/Form.html
+++ b/Practice/Form.html
@@ -1,57 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hetuk</title>
-    <link rel="stylesheet" href="../Practice/CSS/Form.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="../Practice/CSS/Form.css">
+</head>
+
+<body>
     <div class="parent">
-      <div class="child">
-        <h1>Register Here</h1>
-        <form>
-          <label>First Name:</label><br />
-          <input
-            type="text"
-            placeholder="Enter Your First Name"
-            required
-          /><br /><br />
-          <label>Last Name:</label><br />
-          <input
-            type="text"
-            placeholder="Enter Your Last Name"
-            required
-          /><br /><br />
-          <label>Your Age:</label><br />
-          <input
-            type="number"
-            placeholder="What Is Your Age?"
-            required
-          /><br /><br />
-          <label>Email:</label><br />
-          <input
-            type="email"
-            placeholder="Enter Your Email-ID"
-            required
-          /><br /><br />
-          <label>Gender:</label><br />
-          <input type="radio" value="Male" />
-          <label>Male</label>
-          <input type="radio" value="Female" />
-          <label>Female</label><br /><br />
-          <label>Known Language:</label><br />
-          <input type="checkbox" value="Hindi" />
-          <label>Hindi</label>
-          <input type="checkbox" value="English" />
-          <label>English</label>
-          <input type="checkbox" value="Gujarati" />
-          <label>Gujarati</label>
-          <input type="checkbox" value="Other" />
-          <label>Other</label><br /><br />
-          <button value="Submit">Submit</button>
-        </form>
-      </div>
+        <div class="child">
+            <h1>Register Here</h1>
+            <form>
+                <label>First Name:</label><br>
+                <input type="text" placeholder="Enter Your First Name" required><br><br>
+                <label>Last Name:</label><br>
+                <input type="text" placeholder="Enter Your Last Name" required><br><br>
+                <label>Your Age:</label><br>
+                <input type="number" placeholder="What Is Your Age?" required><br><br>
+                <label>Email:</label><br>
+                <input type="email" placeholder="Enter Your Email-ID" required><br><br>
+                <label>Gender:</label><br>
+                <input title="radio" type="radio" value="Male">
+                <label>Male</label>
+                <input title="radio" type="radio" value="Female">
+                <label>Female</label><br><br>
+                <label>Known Language:</label><br>
+                <input title="radio" type="checkbox" value="Hindi">
+                <label>Hindi</label>
+                <input title="radio" type="checkbox" value="English">
+                <label>English</label>
+                <input title="radio" type="checkbox" value="Gujarati">
+                <label>Gujarati</label>
+                <input title="radio" type="checkbox" value="Other">
+                <label>Other</label><br><br>
+                <button type="submit" value="Submit">Submit</button>
+            </form>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
