Day 2 Anime Website

--- a/Anime Website/HTML/index.html
+++ b/Anime Website/HTML/index.html
@@ -37,31 +37,31 @@
     <div class="parent">
         <div class="recent">
             <div class="item">
-                <div class="image1"></div>
+                <img src="../utils/Solo Leveling.png" alt="Solo Leveling" class="image1">
                 <div class="text">
                     Solo Leveling Season 2: Arise from the Shadow &amp; Hindi-Tamil-Telugu-Eng-Jap &amp; Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                 </div>
             </div>
             <div class="item">
-                <div class="image2"></div>
+                <img src="../utils/Jujutsu Kaisen.jpg" alt="Jujutsu Kaisen" class="image1">
                 <div class="text">
                     Jujutsu Kaisen Season 1[Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                 </div>
             </div>
             <div class="item">
-                <div class="image3"></div>
+                <img src="../utils/Demon Slayer.jpg" alt="Demon Slayer" class="image1">
                 <div class="text">
                     Demon Slayer Season 1[Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                 </div>
             </div>
             <div class="item">
-                <div class="image4"></div>
+                <img src="../utils/Naruto.jpg" alt="Naruto" class="image1">
                 <div class="text">
                     Naruto Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                 </div>
             </div>
             <div class="item">
-                <div class="image5"></div>
+                <img src="../utils/Death Note.jpg" alt="Death Note" class="image1">
                 <div class="text">
                     Death Note [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                 </div>
