Day 5 Anime Website

--- a/Anime Website/HTML/index.html
+++ b/Anime Website/HTML/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="child2">
             <img src="../utils/Facebook.svg" alt="Facebook Logo">
-            <img src="../utils/Youtube.png" alt="Youtube Logo">
+            <img src="../utils/Youtube.png" alt="Youtube Logo" class="image">
         </div>
     </nav>
     <div class="parent">
@@ -204,8 +204,23 @@
                 <img src="../utils/Join_Us_Telegram.png" alt="Join Us On Telegram" class="telegram">
                 <h2>Advertisement</h2>
                 <hr>
-                <p class="ads">Sorry No Advertisement Are Available</p>
+                <p class="ads">Sorry No Advertisements Are Available</p>
             </div>
+        </div>
+        <div class="pagination">
+            <button class="btn2">1</button>
+            <button class="btn3">2</button>
+            <button class="btn3">3</button>
+            <button class="btn">...</button>
+            <button class="btn3">191</button>
+            <button class="btn1">NEXT ></button>
+        </div>
+    </div>
+    <div class="footer">
+        <p class="text1">Copyright © 2012-2025. All Rights Reserved by <a>HETUKANIME4ALL</a>.</p>
+        <div class="footer_img">
+            <img src="../utils/Facebook.svg" alt="Facebook">
+            <img src="../utils/Youtube.png" alt="Youtube" class="image">
         </div>
     </div>
 </body>
