Day 6 Anime Website

--- a/Anime Website/HTML/index.html
+++ b/Anime Website/HTML/index.html
@@ -11,6 +11,7 @@
 <body>
     <header class="title">
         <h1>HetukAnime4All</h1>
+        <p class="search">🔍</p>
     </header>
     <nav class="navbar">
         <div class="child1">
@@ -68,6 +69,7 @@
             </div>
         </div>
         <div class="latest">
+            <div class="parent1">
             <div class="child3">
                 <div class="anime">
                     <img src="../utils/Solo Leveling(1).jpg" alt="Solo Leveling Image" class="latest_img">
@@ -166,6 +168,15 @@
                     </div>
                 </div>
             </div>
+            <div class="pagination">
+                <button class="btn2">1</button>
+                <button class="btn3">2</button>
+                <button class="btn3">3</button>
+                <button class="btn">...</button>
+                <button class="btn4">191</button>
+                <button class="btn1">NEXT ></button>
+            </div>
+            </div>
             <div class="child4">
                 <input type="text" placeholder="Type Here To Search...">
                 <h6>Follow Me</h6>
@@ -206,14 +217,6 @@
                 <hr>
                 <p class="ads">Sorry No Advertisements Are Available</p>
             </div>
-        </div>
-        <div class="pagination">
-            <button class="btn2">1</button>
-            <button class="btn3">2</button>
-            <button class="btn3">3</button>
-            <button class="btn">...</button>
-            <button class="btn3">191</button>
-            <button class="btn1">NEXT ></button>
         </div>
     </div>
     <div class="footer">
