Day 26 Masai Website

--- a/Masai Website(Hetuk)/HTML/Fees.html
+++ b/Masai Website(Hetuk)/HTML/Fees.html
@@ -96,6 +96,48 @@
                 <button type="submit">Masai One</button>
                 <h5>Masai Launchpad</h5>
             </div>
+            <table>
+                <thead>
+                    <tr class="head">
+                        <th class="category">Category</th>
+                        <th class="ctc">Your Salary Range<br> (CTC)</th>
+                        <th class="pap2">Monthly Payable Amount<br> (PAP)</th>
+                        <th class="months">Tenure (in<br> months)</th>
+                        <th class="fees">Total Payable Fee (Including taxes if<br> applicable)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="column1">
+                        <td></td>
+                        <td>3.5 LPA</td>
+                                <td>0</td>
+                                <td>NA</td>
+                                <td>0</td>
+                    </tr>
+                    <tr class="column2">
+                        <td><b>A</b></td>
+                        <td>3.5 - 4.99 LPA</td>
+                        <td>₹ 6,944</td>
+                        <td>36</td>
+                        <td>2,50,000</td>
+                    </tr>
+                    <tr class="column3">
+                        <td><b>B</b></td>
+                        <td>5 - 9.99 LPA</td>
+                        <td>₹ 9,722</td>
+                        <td>36</td>
+                        <td>3,50,000</td>
+                    </tr>
+                    <tr class="column4">
+                        <td><b>C</b></td>
+                        <td>10 LPA and above</td>
+                        <td>₹ 15,000 </td>
+                        <td>30</td>
+                        <td>4,50,000</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h4>CTC (Cost to Company) is defined as the total gross income earned, including but not limited, to variable pay, compensations and<br> ESOPs. Find out more in the FAQ section.</h4>
         </div>
     </div>
     <div class="responsive_table">
