Aafiya Website Darkmode

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <button class="theme_switch">
+        <img src="./Images/Light Mode.svg" alt="Light Mode">
+        <img src="./Images/Dark Mode.svg" alt="Dark Mode">
+    </button>
     <nav>
         <div class="child1">
             <div class="images">
@@ -444,5 +448,5 @@
         </div>
     </div>
 </body>
-
+<script src="./JavaScript/Darkmode.js"></script>
 </html>
