--- a/Projects/HTML/index.html
+++ b/Projects/HTML/index.html
@@ -5,43 +5,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hetuk</title>
-    <link rel="stylesheet" href="./CSS/Aafiya.css" />
+    <link rel="stylesheet" href="../CSS/Aafiya.css" />
 </head>
 
 <body>
     <button class="theme_switch">
-        <img src="./Images/Light Mode.svg" alt="Light Mode">
-        <img src="./Images/Dark Mode.svg" alt="Dark Mode">
+        <img src="../Images/Light Mode.svg" alt="Light Mode">
+        <img src="../Images/Dark Mode.svg" alt="Dark Mode">
     </button>
     <nav>
         <div class="child1">
             <div class="images">
-                <img src="./Images/Aafiya Logo.svg" alt="Aafiya Logo" class="img1" />
-                <img src="./Images/Logo 2.png" alt="Logo" class="img2" />
+                <img src="../Images/Aafiya Logo.svg" alt="Aafiya Logo" class="img1" />
+                <img src="../Images/Logo 2.png" alt="Logo" class="img2" />
             </div>
             <div class="image_text">
                 <div class="book_text">
-                    <img src="./Images/Book.svg" alt="Book" class="img3" />
+                    <img src="../Images/Book.svg" alt="Book" class="img3" />
                     <div class="grid">
                         <p class="text">Second Medical Option</p>
                         <p class="text1">Book Consultation</p>
                     </div>
                 </div>
                 <div class="call_text">
-                    <img src="./Images/Call.svg" alt="Call" class="img4" />
+                    <img src="../Images/Call.svg" alt="Call" class="img4" />
                     <div class="grid">
                         <p class="text">Call Us On</p>
                         <p class="text1">985 896 2222</p>
                     </div>
                 </div>
                 <div class="mail_text">
-                    <img src="./Images/Mail.png" alt="Mail" class="img5" />
+                    <img src="../Images/Mail.png" alt="Mail" class="img5" />
                     <div class="grid">
                         <p class="text">Email Us On</p>
                         <p class="text1">info@mediretreats.com</p>
                     </div>
                 </div>
-                <img src="./Images/India.svg" alt="India Flag" class="img6" />
+                <img src="../Images/India.svg" alt="India Flag" class="img6" />
             </div>
         </div>
         <div class="child2">
@@ -76,7 +76,7 @@
     </div>
     <div class="nav2">
         <ul>
-            <li class="list">Overview</li>
+            <li>Overview</li>
             <li>Eligibility</li>
             <li>Preparation</li>
             <li>About Treatment</li>
@@ -98,7 +98,7 @@
             </p>
         </div>
         <div class="treatment_img">
-            <img src="./Images/treatment_overview (1).jpg" alt="Image" />
+            <img src="../Images/treatment_overview (1).jpg" alt="Image" />
         </div>
     </div>
     <hr class="dot_line" />
@@ -234,12 +234,12 @@
                     Underwent procedure for<br /> retinal detachment
                 </p>
                 <br /><br />
-                <img src="./Images/Quotes.svg" alt="Quotes" class="quotes" />
+                <img src="../Images/Quotes.svg" alt="Quotes" class="quotes" />
             </div>
-            <img src="./Images/Patient_Stories.png" alt="Image Of Patient" />
+            <img src="../Images/Patient_Stories.png" alt="Image Of Patient" />
             <br />
             <div class="profile1">
-                <img src="./Images/Profile.svg" alt="Luke Olfert" />
+                <img src="../Images/Profile.svg" alt="Luke Olfert" />
                 <div class="flex">
                     <h5>Luke Olfert</h5>
                     <p>New York, USA</p>
@@ -252,14 +252,14 @@
                     Underwent Colonoscope And<br /> Medical Management
                 </p>
                 <br /><br />
-                <img src="./Images/Quotes.svg" alt="Quotes" class="quotes" />
+                <img src="../Images/Quotes.svg" alt="Quotes" class="quotes" />
             </div>
             <p class="padding">
                 Lorem ipsum dolor sit amet consectetur eaque facere.<br /> Ipsa alias quae eligendi eaque nam minima facere<br /> soluta dolore, adipisci ipsum, facere fugiat facere earn<br /> nam minima qui libero! Perspici facere fugiat facere<br />                exercitationem nemo culpa ut facere facere fugiat
                 <br /> architecto facere fugiat.
             </p>
             <div class="P">
-                <img src="./Images/Profile.svg" alt="Luke Olfert" />
+                <img src="../Images/Profile.svg" alt="Luke Olfert" />
                 <div class="F">
                     <h5>Luke Olfert</h5>
                     <p>Sydney,Australia</p>
@@ -314,17 +314,17 @@
         </div>
         <div class="card_parent">
             <div class="card">
-                <img src="./Images/Apollo Hospital.png" alt="Apollo Hospital" id="apollo" />
+                <img src="../Images/Apollo Hospital.png" alt="Apollo Hospital" id="apollo" />
                 <h3>Apollo Hospital</h3>
                 <h5>Banglore</h5>
             </div>
             <div class="card">
-                <img src="./Images/Medanta Hospital.png" alt="Medanta Hospital" id="apollo" />
+                <img src="../Images/Medanta Hospital.png" alt="Medanta Hospital" id="apollo" />
                 <h3>Medanta Hospital</h3>
                 <h5>Gurgaon</h5>
             </div>
             <div class="card">
-                <img src="./Images/Jaslok Hospital.png" alt="Jaslok Hospital" id="apollo" />
+                <img src="../Images/Jaslok Hospital.png" alt="Jaslok Hospital" id="apollo" />
                 <h3>Jaslok Hospital</h3>
                 <h5>Mumbai</h5>
             </div>
@@ -399,7 +399,7 @@
             <br />
             <div class="child_footer">
                 <div class="flex">
-                    <img src="./Images/icon.png" alt="Icon" />
+                    <img src="../Images/icon.png" alt="Icon" />
                     <div class="flex1">
                         <h3>Are you doctor / hospital?</h3>
                         <h2>Join Mediretreats</h2>
@@ -410,7 +410,7 @@
                 </p>
             </div>
             <div class="about">
-                <img src="./Images/footer-logo.png" alt="Aafiya Footer Logo" />
+                <img src="../Images/footer-logo.png" alt="Aafiya Footer Logo" />
                 <br />
                 <div class="text">
                     <h3>About Aafiya Mediretreats</h3>
@@ -424,10 +424,10 @@
                     <div class="logo_img">
                         <h3>Follow Us On</h3>
                         <div class="logo_img1">
-                            <img src="./Images/Facebook (1).png" alt="Facebook Logo" class="facebook" />
-                            <img src="./Images/Twitter (1).png" alt="Twitter Logo" class="twitter" />
-                            <img src="./Images/Instagram (1).png" alt="Instagram Logo" class="instagram" />
-                            <img src="./Images/Youtube (1).png" alt="Youtube Logo" class="youtube" />
+                            <img src="../Images/Facebook (1).png" alt="Facebook Logo" class="facebook" />
+                            <img src="../Images/Twitter (1).png" alt="Twitter Logo" class="twitter" />
+                            <img src="../Images/Instagram (1).png" alt="Instagram Logo" class="instagram" />
+                            <img src="../Images/Youtube (1).png" alt="Youtube Logo" class="youtube" />
                         </div>
                     </div>
                     <div class="text">
@@ -448,5 +448,5 @@
         </div>
     </div>
 </body>
-<script src="./JavaScript/Darkmode.js"></script>
+<script src="../JavaScript/Darkmode.js"></script>
 </html>
