Day11 Anime Website

--- a/Anime Website/HTML/index.html
+++ b/Anime Website/HTML/index.html
@@ -39,45 +39,62 @@
         <div class="parent">
             <div class="recent">
                 <div class="item">
-                    <img src="../utils/Solo Leveling.jpg" alt="Solo Leveling"
-                        class="image1">
-                    <div class="text">
-                        Solo Leveling Season 2: Arise from the Shadow &amp;
-                        Hindi-Tamil-Telugu-Eng-Jap &amp; Multi Audio 480p, 720p
-                        &amp; 1080p HD WEB-DL | 10bit HEVC ESub
-                    </div>
+                    <a href="../HTML/SL.html">
+                        <img src="../utils/Solo Leveling.jpg"
+                            alt="Solo Leveling"
+                            class="image1">
+                        <div class="text">
+                            Solo Leveling Season 2: Arise from the Shadow &amp;
+                            Hindi-Tamil-Telugu-Eng-Jap &amp; Multi Audio 480p,
+                            720p
+                            &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                        </div>
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="../utils/Jujutsu Kaisen.jpg" alt="Jujutsu Kaisen"
-                        class="image1">
-                    <div class="text">
-                        Jujutsu Kaisen Season 1[Hindi-Tamil-Telugu-Eng-Jap]
-                        Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
-                        HEVC ESub
-                    </div>
+                    <a href>
+                        <img src="../utils/Jujutsu Kaisen.jpg"
+                            alt="Jujutsu Kaisen"
+                            class="image1">
+                        <div class="text">
+                            Jujutsu Kaisen Season 1[Hindi-Tamil-Telugu-Eng-Jap]
+                            Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
+                            HEVC ESub
+                        </div>
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="../utils/Demon Slayer.jpg" alt="Demon Slayer"
-                        class="image1">
-                    <div class="text">
-                        Demon Slayer Season 1[Hindi-Tamil-Telugu-Eng-Jap] Multi
-                        Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
-                    </div>
+                    <a href>
+                        <img src="../utils/Demon Slayer.jpg" alt="Demon Slayer"
+                            class="image1">
+                        <div class="text">
+                            Demon Slayer Season 1[Hindi-Tamil-Telugu-Eng-Jap]
+                            Multi
+                            Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC
+                            ESub
+                        </div>
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="../utils/Naruto.jpg" alt="Naruto" class="image1">
-                    <div class="text">
-                        Naruto Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio
-                        480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
-                    </div>
+                    <a href>
+                        <img src="../utils/Naruto.jpg" alt="Naruto"
+                            class="image1">
+                        <div class="text">
+                            Naruto Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi
+                            Audio
+                            480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                        </div>
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="../utils/Death Note.jpg" alt="Death Note"
-                        class="image1">
-                    <div class="text">
-                        Death Note [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio
-                        480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
-                    </div>
+                    <a href>
+                        <img src="../utils/Death Note.jpg" alt="Death Note"
+                            class="image1">
+                        <div class="text">
+                            Death Note [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio
+                            480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="latest">
@@ -88,11 +105,14 @@
                                 alt="Solo Leveling Image" class="latest_img">
                             <div class="description">
                                 <p>
-                                    Solo Leveling Season 2:<br> Arise from the
-                                    Shadow [Hindi-<br>Tamil-Telugu-Eng-Jap]
-                                    Multi
-                                    <br> Audio 480p, 720p &amp; 1080p
-                                    HD<br>WEB-DL | 10bit HEVC ESub
+                                    <a href="../HTML/SL.html">
+                                        Solo Leveling Season 2:<br> Arise from
+                                        the
+                                        Shadow [Hindi-<br>Tamil-Telugu-Eng-Jap]
+                                        Multi
+                                        <br> Audio 480p, 720p &amp; 1080p
+                                        HD<br>WEB-DL | 10bit HEVC ESub
+                                    </a>
                                 </p>
                                 <br>
                                 <div class="time">
@@ -114,10 +134,14 @@
                                 alt="Jujutsu Kaisen" class="latest_img">
                             <div class="description">
                                 <p>
-                                    Jujutsu Kaisen
-                                    [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi Audio
-                                    480p, 720p &amp;<br> 1080p HD WEB-DL | 10bit
-                                    HEVC ESub
+                                    <a href>
+                                        Jujutsu Kaisen
+                                        [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi
+                                        Audio
+                                        480p, 720p &amp;<br> 1080p HD WEB-DL |
+                                        10bit
+                                        HEVC ESub
+                                    </a>
                                 </p>
                                 <br>
                                 <div class="time">
@@ -139,9 +163,13 @@
                                 alt="Demon Slayer" class="latest_img">
                             <div class="description">
                                 <p>
-                                    Demon Slayer[Hindi-Tamil-Telugu<br>-Eng-Jap]
-                                    Multi Audio 480p, 720p &amp;<br> 1080p HD
-                                    WEB-DL | 10bit HEVC ESub
+                                    <a href>
+                                        Demon
+                                        Slayer[Hindi-Tamil-Telugu<br>-Eng-Jap]
+                                        Multi Audio 480p, 720p &amp;<br> 1080p
+                                        HD
+                                        WEB-DL | 10bit HEVC ESub
+                                    </a>
                                 </p>
                                 <br>
                                 <div class="time">
@@ -163,9 +191,13 @@
                                 alt="Death Note" class="latest_img">
                             <div class="description">
                                 <p>
-                                    Death Note [Hindi-Tamil-Telugu<br>-Eng-Jap]
-                                    Multi Audio 480p, 720p &amp;<br> 1080p HD
-                                    WEB-DL | 10bit HEVC ESub
+                                    <a href>
+                                        Death Note
+                                        [Hindi-Tamil-Telugu<br>-Eng-Jap]
+                                        Multi Audio 480p, 720p &amp;<br> 1080p
+                                        HD
+                                        WEB-DL | 10bit HEVC ESub
+                                    </a>
                                 </p>
                                 <br>
                                 <div class="time">
@@ -187,10 +219,14 @@
                                 class="latest_img">
                             <div class="description">
                                 <p>
-                                    Naruto Season 01
-                                    [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi Audio
-                                    480p, 720p &amp;<br> 1080p HD WEB-DL | 10bit
-                                    HEVC ESub
+                                    <a href>
+                                        Naruto Season 01
+                                        [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi
+                                        Audio
+                                        480p, 720p &amp;<br> 1080p HD WEB-DL |
+                                        10bit
+                                        HEVC ESub
+                                    </a>
                                 </p>
                                 <br>
                                 <div class="time">
@@ -232,31 +268,53 @@
                     <hr class="hr_2">
                     <div class="uploads">
                         <p>
-                            Solo Leveling Season 2: Arise from the Shadow
-                            [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
-                            &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            <a href="../HTML/SL.html">
+                                Solo Leveling Season 2: Arise from the Shadow
+                                [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p,
+                                720p
+                                &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            </a>
                         </p>
                         <p>
-                            Demon Slayer Season 01[Hindi-Tamil-Telugu-Eng-Jap]
-                            Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
-                            HEVC ESub
+                            <a href>
+                                Demon Slayer Season
+                                01[Hindi-Tamil-Telugu-Eng-Jap]
+                                Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
+                                10bit
+                                HEVC ESub
+                            </a>
                         </p>
                         <p>
-                            Jujutsu Kaisen Season 01
-                            [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
-                            &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            <a href>
+                                Jujutsu Kaisen Season 01
+                                [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p,
+                                720p
+                                &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            </a>
                         </p>
                         <p>
-                            Naruto Season 01 [Hindi-Tamil-Telugu-Eng-Jap] Multi
-                            Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC
-                            ESub
+                            <a href>
+                                Naruto Season 01 [Hindi-Tamil-Telugu-Eng-Jap]
+                                Multi
+                                Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
+                                HEVC
+                                ESub
+                            </a>
                         </p>
                         <p>
-                            Death Note Season 01 [Hindi-Tamil-Telugu-Eng-Jap]
-                            Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
-                            HEVC ESub
+                            <a href>
+                                Death Note Season 01
+                                [Hindi-Tamil-Telugu-Eng-Jap]
+                                Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
+                                10bit
+                                HEVC ESub
+                            </a>
                         </p>
-                        <p>Attack on Titan OAD Episodes Multi Audio</p>
+                        <p>
+                            <a href>
+                                Attack on Titan OAD Episodes Multi Audio
+                            </a>
+                        </p>
                     </div>
                     <h4>Join Us On Discord</h4>
                     <hr class="hr_3">
