Day 12 Anime Website

--- a/Anime Website/HTML/SL.html
+++ b/Anime Website/HTML/SL.html
@@ -65,7 +65,106 @@
                 <h4 class="black">[1080p | 720p | 480p | Hindi - Tamil - Telugu
                     - English -
                     Japanese | WEB-DL | ESub]</h4>
-                    <img src="../utils/Solo Leveling.jpg" alt="Solo Leveling" class="image1">
+                <img src="../utils/Solo Leveling.jpg" alt="Solo Leveling" class="image1">
+                <div class="anime_info">
+                <div class="genre">
+                    <p class="red">Genre:</p>
+                    <p class="bold">Animation | Action | Adventure</p>
+                </div>
+                <div class="org">
+                    <p class="red">Org. Run:</p>
+                    <p class="bold">TV Series(2024-2025)</p>
+                </div>
+                <div class="run">
+                    <p class="red">Running Time:</p>
+                    <p class="bold">24min</p>
+                </div>
+                <div class="lang">
+                    <p class="red">Language:</p>
+                    <p class="bold">Japanese - English - Tamil - Telugu - <a class="green">Hindi 2.0</a> [Org. CR WEB Audio]</p>
+                </div>
+                <div class="episodes">
+                    <p class="red">Episodes:</p>
+                    <p class="bold">13</p>
+                </div>
+                <div class="sub">
+                    <p class="red">Subtitle:</p>
+                    <p class="bold">English {ASS} [Softcoded]</p>
+                </div>
+                <div class="quality">
+                    <p class="red">Quality:</p>
+                    <p class="bold">1080p FHD | 720p HD | 480p WEB-DL</p>
+                </div>
+                <div class="encoder">
+                    <p class="red">Encoder:</p>
+                    <p class="blue">HETUK ANIME</p>
+                </div>
+                <div class="synopsis">
+                    <p class="red">Synopsis:</p>
+                    <p class="bold_1">In a world of gifted hunters and monsters, a weak hunter Sung Jinwoo gains extraordinary powers through a <br>mysterious program, leading him to become one of the strongest hunters and conquering even the strongest dungeons.</p>
+                </div>
+            </div>
+            <div class="screenshot">
+                <p class="small">⇒ screenshots here</p>
+                <p class="bold_2">+</p>
+            </div>
+            <hr class="ss">
+            <p class="sl">||Download Solo Leveling Season 2 Episodes in Hindi Multi Audio||</p>
+            <div class="episode1">
+                <p>season 2</p>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 1</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 2</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 3</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 4</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 5</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 6</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 7</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 8</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 9</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 10</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 11</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 12</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1">
+                    <p class="small_1">Episode 13</p>
+                    <p class="bold_2">+</p>
+                </div>
+            </div>
             </div>
             <div class="child4">
                 <input type="text" placeholder="Type Here To Search...">
